--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Title of the document</title>
-</head>
+  <head>
+    <title>Happy Birthday Nabira</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-<body>
-<p>test</p>
-</body>
+  <body>
+  <h1>test</h1>
+  </body>
 
 </html>
