--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
 
   <body>
-    <img "birthday.gif" alt="birthday">
-    <img "birthday.gif" alt="birthday">
+    <img src="birthday.gif" alt="birthday">
+    <img src="birthday.gif" alt="birthday">
     <div class="note">
       <h1>HAPPY BIRTHDAY NABIRA🎉🎉🎉</h1>
       <p>Hello my love I am writing this off the cuff but I wanted to send you a message for your birthday. I’ve stayed up until 12:00 to write this hopefully but I just lied that it was some stupid ass report LOL. I know you prefer letters that are written down and heartfelt but I figured with the circumstances I would write something that I could give you now. </p>
