--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
       <p>I want to be here and help you when you are down. I want to smile with you, to laugh with you, to cry with you, and to be nothing with you and just spend as much time as we can just being together. I want to live with you and I want to grow with you and I want to go through all the stages of my life with you. There’s nothing more than that in life that I want. </p>
       <p>Your voice is like music to me. Seeing you smile is like seeing the best art in the whole entire world. Nothing could match your beauty, not any great work in history nor any view the beauty of the world could conjure up. You are so beautiful from every angle at every time.  </p>
       <p>I know, my love, that there are a lot of stresses in life. But you are so strong and you persist through anything. I couldn’t imagine another person in the world who would match your tenacity, match your determination to push through it all even when you feel like the whole world is pushing back against you. You are perfect. </p>
+      <p>A million hearts for you Nabira. I love you so much my forever love.</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
+      <p>💖💖💖💖💖💖</p>
       </div>
   </body>
 
